tests/tc/neg/obj01.js
/*@ id :: forall A. ({a: A}) => B */
function id(x) {
  return x.b;
}

